# django-fastapi-python-meetup2023

./: README.md  mg.py  pyproject.toml
dj_app/app/: urls.py  utils.py  views.py
dj_app/dj_app/: settings.py  urls.py
fastapi_app/: fastapi_app.py  models.py  utils.py
