[tool.poetry]
name = "django-fastapi"
version = "0.1.0"
description = "demonstration package to compare Django and FastAPI"
authors = ["IgorrrT <ihor.tymoshenko@levi9.com>"]
readme = "README.md"
packages = [{include = "django_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
fastapi = "^0.103.2"
pymongo = "^4.5.0"
dnspython = "^2.4.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
